# ferrex

./: .aliases  .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  bench-post-shared-atlas.txt  bench.txt  check-schema.sql  check_series.sql  clippy.toml  debug_series_issue.sql  deny.toml  dist-workspace.toml  docker-compose.dev.yml  docker-compose.perf.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.tailscale.yml  docker-compose.unraid.yml  docker-compose.yml  flake.nix  justfile  package-lock.json  packaging.toml  release-please-config.json  seccomp-allow-iouring.json  test_series_metadata.sql  test_truncate.rs
core/: Cargo.toml
core/src/: database.rs  database_old.rs  error.rs  lib.rs  media.rs  metadata.rs  scanner.rs
ferrex-config/: Cargo.toml
ferrex-config/src/: constants.rs  env_writer.rs  lib.rs  runner.rs  util.rs
ferrex-config/tests/: cli_help.rs  golden_init.rs  init_e2e.rs
ferrex-contracts/: Cargo.toml  README.md
ferrex-contracts/src/: details_like.rs  id.rs  lib.rs  media_like.rs  media_ops.rs  sub_like.rs
ferrex-core/: Cargo.toml  monitor_index_usage.sql  sqlx.toml
ferrex-core/.sqlx/: query-005945da6b05cfb5bdb15dd60d6aa6c874fd5113d24227bc6ccb2329904db849.json  query-01888f611c16042629882440ad52ddf20348541d42f9cadd23d7d4da93269422.json  query-027510fa6c7e5076bdb4de1ec10c3ec15e4d12ab9ffde8ea8fcb257367a3fec6.json  query-033900862b4f1dbcb2de2abc88ef6ca24190f54201b617d7c0507270eed56fef.json  query-0479ea2e81b6a4a52c70c76770fc2749e10f6787e89044f0c02406edbf5d79d2.json  query-04f2cdd2714213637d460c81cb116330333a1d172156b6ae0fb0da08cc78d037.json  query-06b46ce26fde15c1d853ce415f77ad7fb9f4a0d9f34f3a6bf5de6a064b0bbc56.json  query-07a6bf1351ac130e6ab26ec2cd3f3000235ca5d204b9da06b73b9a25c6ffa86a.json  query-0b3d640e189bf6d71537b8ddae122968470a33e8dc7175e4b15c01fe225e01e7.json  query-0ed939ca7de1d80b118a2be6f0fcbe5efa4c49ea4a39a2b03cb66271db316144.json  query-1029e9cb7277ee79e62276fa13ec1fccc1d097aa4100912de704978264dbd3f3.json  query-10d7d6fb45bfc843d0444bc7127e1faec43d8c8d6d13414cf49fac3ad7eba762.json  query-12ca9a28a7f3082441431eb9c51700571870eeb8559e06d03937cb4f41013a68.json  query-130c06afbad42b36746cce6f86a66794cf6c48835d9be90da864afc656c5a894.json  query-1366e23e622052a0f7dbcc61020e32636049638da9af98cee87a5bbd6edef6dd.json  query-1446be43fc4f3d8851c8afa77d8d5d3ededaad1dd81d3aa4710dc2f2f2a5f093.json  query-161505c1fc9b7677dda2bbc2c048a39bd8114871c19938cce1b8101d746d3dfc.json  query-1649730dcea02f466acd800570ae4e7aa2624ca55e93ee11aa49df39f9a1ee3d.json  query-16e2421c695acfb7f87caa9f660be2c1c5cb0fdc5bd8b7430e4bf225af3e4ff4.json  query-16f1ae34d1701198ccf41bc6f4815d9b32570bcffddbd2c198bf4b3b960ac103.json  query-18cc6223d80a00688d2c7c152a08cd724c0a5d4d34f838b9412ad4a45e8b4b0c.json  query-1970792905b01d33369f755c999c46797de372c181f25e3afa2b2ec4d40be06d.json  query-19a8626677d245a1b28ca7fe7c7bb01ef449029b0a6abeb39db4bde229796431.json  query-19ac3cfe4267e2b7af23acef02e13d37504fe0ee8980f83e5939dc03e68f52ae.json  query-19b771e9695e25c5b7af80b4eeb2e554a4599477d16a6e90474a11dd8d6f2e30.json  query-1b35e34a727f69eb028df244ca45c4e833adf87ac70eaf915375373f1dda0d70.json  query-1b7f3b19f0bba24eaeb046f72698c904e42583a6b0f6c9548a19fc44c590cb3d.json  query-1ba682b2f81d8bf59274f8e21756ba377942db880aca7e9dcdb8549a6ff9eccf.json  query-1bf679f04f5c95a54823cfec8a755ba352f8e3b2a341cfc70f5439f7a8465fb9.json  query-1d3236c695d12dd118744a48537931f54f7c7d6763530fa247d367bce477d106.json  query-1e22f76b302abc055fbb3310285b4446e6650a49e1f9a37940cd4e11653623c0.json  query-1edc541b4d2e4e3cb0081de26f1009fbcf1bceaf8bfd55bc3e9a8f59f3da80b2.json  query-1fc4740eef76d1c97d5638647c6f63f79d83952e2fbb90260f8f60975dd13cca.json  query-2033ef5dc729950ca64d4051591e09860894143ebde3faf4f25cb457da7a2cab.json  query-20c6b0270eb8f807d54dd67a609dd445bc8df0118dbcd2f2af675b7064b287c6.json  query-230504a6761abdd5e5a3ceea259c3afe89cb0b4a465f0639f43024877a738c65.json  query-23a11425b5b302d1f2d92c512f665320cfc2641938236d14f54956b270ade21c.json  query-23df404425ad39571e55549f81d92b5becbc721f0b9fe8f99f9fc7ff5c1e7a49.json  query-26970097b0085a34a7e92a9ad5dbdaf49a03780377770384f58591b9e2a58145.json  query-274b5d8d5a33ab3f6153b6071124e859b235cc0a9936a05b1b8df512b2253471.json  (+206 more)
ferrex-core/fixtures/: folder_inventory_base.sql  media_processing_base.sql  test_libraries.sql
ferrex-core/migrations/: 001_full_schema.down.sql  001_full_schema.sql  001_initial_schema.down.sql  001_initial_schema.sql  002_episode_identity_watch.sql  002_image_registry.down.sql  002_image_registry.sql  003_scan_state.down.sql  003_scan_state.sql  004_add_theme_color.down.sql  004_add_theme_color.sql  005_fix_series_references_constraint.down.sql  005_fix_series_references_constraint.sql  006_user_management.down.sql  006_user_management.sql  007_watch_status.down.sql  007_watch_status.sql  008_sync_sessions.down.sql  008_sync_sessions.sql  009_rbac_system.down.sql  009_rbac_system.sql  010_device_authentication.down.sql  010_device_authentication.sql  011_performance_indices.down.sql  011_performance_indices.sql  012_extend_user_model.down.sql  012_extend_user_model.sql  013_user_performance_indexes.down.sql  013_user_performance_indexes.sql  014_auth_device_states.down.sql  014_auth_device_states.sql  015_jwt_blacklist.sql  016_auth_device_sessions_unified.down.sql  016_auth_device_sessions_unified.sql  017_security_audit_log.down.sql  017_security_audit_log.sql  018_query_optimization.down.sql  018_query_optimization.sql  019_season_library_id.down.sql  019_season_library_id.sql  (+20 more)
ferrex-core/src/: api_routes.rs  api_scan.rs  api_types.rs  database_old.rs  error.rs  extras_parser.rs  image_service.rs  lib.rs  library.rs  media.rs  media.rs.backup  media_reference_ext.rs  metadata.rs  metadata.rs.archive2  (+12 more)
ferrex-flatbuffers/: Cargo.toml
ferrex-model/: Cargo.toml  README.md
ferrex-player/: Cargo.toml  README.md
ferrex-server/: Cargo.toml
ferrexctl/: Cargo.toml  README.md
server/: Cargo.toml
(+2248 files in other folders)
