[workspace]
members = ["ferrex-server", "ferrex-core", "ferrex-player"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Grayson Hieb"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lowband21/rusty-media-server"
documentation = "https://docs.rs/ferrex"
homepage = "https://github.com/Lowband21/ferrex_media_server"
readme = "README.md"
keywords = ["media-server", "streaming", "rust", "video", "hdr", "iced", "shader"]
categories = ["multimedia", "web-programming::http-server"]

[workspace.dependencies]
# Async runtime
tokio = { version = "^1.47", default-features = false, features = ["full"] }
tokio-util = { version = "^0.7", default-features = false, features = ["io"] }
tokio-stream = { version = "^0.1", default-features = false, features = ["sync"] }

# Futures
futures = "^0.3"
futures-util = "^0.3"

# Serialization
serde = { version = "^1.0", default-features = false, features = ["std", "derive"] }
serde_json = "^1.0"
rkyv = { version = "^0.8.12", default-features = false, features = ["std", "alloc", "bytecheck", "little_endian", "aligned", "pointer_width_32", "uuid-1"] }

# Error handling
anyhow = "^1.0"
thiserror = "^2.0"

# Logging
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
log = "^0.4"

# Time handling
chrono = { version = "^0.4", default-features = false, features = ["alloc", "std", "clock", "now", "serde"] }

# HTTP/Web
axum = { version = "^0.8.6", features = ["ws", "macros"] }
axum-server = { version = "^0.7", features = ["tls-rustls"] }
axum-extra = { version = "^0.10", features = ["typed-header"] }
tower = { version = "^0.5", features = ["util"] }
tower-http = { version = "^0.6", features = ["fs", "cors", "trace"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }

# Async traits
async-stream = "^0.3.6"
async-trait = "^0.1"

# Database
surrealdb = { version = "^2.3", features = ["kv-mem"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "macros",
    "derive",
    "bigdecimal",
    "rust_decimal",
    "ipnetwork",
    "json"
] }
redis = { version = "^0.32", features = ["tokio-comp", "connection-manager", "aio"] }
ipnetwork = "^0.20"

# Media processing
ffmpeg-next = "^8.0"

# File system
walkdir = "^2.5"

# Image processing
image = "^0.25"

# Cryptography
sha2 = "^0.10"
aes-gcm = "^0.10"
base64 = "^0.22"
rustls = "^0.23"
rustls-pemfile = "^2.2"
rustls-pki-types = "^1.12"
rand = "^0.9"

# Memory zeroization for secure credentials
zeroize = { version = "^1.8.1", features = ["zeroize_derive"] }

# Temp file handling
tempfile = "^3.21"

# Regex
regex = "^1.11"

# UUID generation
uuid = { version = "^1.18", features = ["v4", "v5", "v7", "serde", "std"] }

# Configuration
config = "^0.15"

# URL
url = "^2.5.7"

# tmdb
tmdb-api = "^0.9.1"

# Testing
mockall = "^0.13"

# Concurrency
rayon = "^1.11"
dashmap = "^6.1"

# Fuzzy matching
fuzzy-matcher = "^0.3"

# Authentication
jsonwebtoken = "^9.3"
argon2 = "^0.5.3"

[profile.release]
lto = "thin"
codegen-units = 256
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.ferrex-player]
opt-level = 2

[profile.release.package.ferrex-player]
opt-level = 3

# Documentation settings
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Define documentation lints
[workspace.lints.rustdoc]
#broken_intra_doc_links = "warn"
#private_intra_doc_links = "warn"
missing_crate_level_docs = "allow"
#private_doc_tests = "warn"
#invalid_codeblock_attributes = "warn"
#invalid_rust_codeblocks = "warn"
#bare_urls = "warn"

[workspace.lints.rust]
# Still need to add docs
missing_docs = "allow"
missing_debug_implementations = "deny"

[patch.crates-io]
iced = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced" }
iced_core = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_core" }
iced_widget = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_widget" }
iced_wgpu = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_wgpu" }

[patch."https://github.com/iced-rs/iced.git"]
iced = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced" }
iced_core = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_core" }
iced_widget = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_widget" }
iced_wgpu = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_wgpu" }

#[patch."https://github.com/iced-rs/iced_aw.git"]
#iced_aw = { path = "../../iced_aw" }
# 
# [patch.crates-io]
#  iced = { path = "../iced_ferrex", package = "iced" }
#  iced_core = { path = "../iced_ferrex/core", package = "iced_core" }
#  iced_widget = { path = "../iced_ferrex/widget", package = "iced_widget" }
#  iced_wgpu = { path = "../iced_ferrex/wgpu", package = "iced_wgpu" }

#  [patch."https://github.com/iced-rs/iced.git"]
#  iced = { path = "../iced_ferrex", package = "iced" }
#  iced_core = { path = "../iced_ferrex/core", package = "iced_core" }
#  iced_widget = { path = "../iced_ferrex/widget", package = "iced_widget" }
#  iced_wgpu = { path = "../iced_ferrex/wgpu", package = "iced_wgpu" }
