[workspace]
members = [
  "ferrex-server",
  "ferrex-core",
  "ferrex-player",
  "ferrex-model",
  "ferrex-contracts",
  "ferrexctl",
]
default-members = ["ferrex-server", "ferrex-core"]
resolver = "3"

[workspace.package]
rust-version = "1.90"
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lowband21/ferrex.git"
homepage = "https://github.com/Lowband21/ferrex"
readme = "README.md"
keywords = [
  "media-server",
  "streaming",
  "rust",
  "video",
  "hdr",
  "iced",
  "shader",
]
categories = ["multimedia", "web-programming::http-server"]

# Documentation settings
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Define documentation lints
[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "allow"
private_doc_tests = "warn"
invalid_codeblock_attributes = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"

[workspace.lints.rust]
# Pre-release (0.1.0-alpha): surface docs gaps without failing builds
missing_docs = "warn"
missing_debug_implementations = "warn"


[workspace.dependencies.ferrex-model]
path = "ferrex-model"
version = "0.1.0"

[workspace.dependencies.ferrex-contracts]
path = "ferrex-contracts"
version = "0.1.0"

[workspace.dependencies.ferrexctl]
path = "ferrexctl"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", default-features = false, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "parking_lot",
  "time",
  "process",
] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
tokio-stream = { version = "0.1", default-features = false, features = [
  "sync",
] }

# On-disk cache (content-addressed, integrity-checked)
cacache = { version = "13.1.0", default-features = false, features = ["tokio-runtime", "mmap"] }

# Futures
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", default-features = false, features = [
  "std",
  "derive",
] }
serde_json = "1.0"
rkyv = { version = "0.8.12", default-features = false, features = [
  "std",
  "alloc",
  "bytecheck",
  "little_endian",
  "aligned",
  "pointer_width_32",
  "uuid-1",
] }
rancor = { version = "0.1.1", default-features = false, features = ["alloc"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Time handling
chrono = { version = "0.4", default-features = false, features = [
  "alloc",
  "std",
  "clock",
  "now",
  "serde",
] }

# HTTP/Web
axum = { version = "0.8.7", default-features = false, features = [
  "http1",
  "http2",
  "ws",
  "macros",
  "json",
  "form",
  "query",
  "matched-path",
] }
axum-server = { version = "0.8", default-features = false, features = [
  "tls-rustls-no-provider",
] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = [
  "fs",
  "cors",
  "trace",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "rustls-tls",
  "json",
  "stream",
  "charset",
] }

# Async traits
async-stream = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
  "macros",
  "derive",
  "bigdecimal",
  "rust_decimal",
  "ipnetwork",
  "json",
] }
redis = { version = "1.0", default-features = false, features = [
  "tokio-comp",
  "connection-manager",
  "aio",
  "script",
] }
ipnetwork = "0.20"

# Media processing
ffmpeg-next = "8.0"

# Image processing
image = "0.25"

# Cryptography
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
rustls = { version = "0.23", default-features = false }
rustls-pki-types = "1.13"
rand = "0.9"

# Memory zeroization for secure credentials
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Temp file handling
tempfile = "3.23"

# Regex
regex = "1.12"

# UUID generation
uuid = { version = "1.19", features = ["v4", "v5", "v7", "serde", "std"] }

# Configuration
config = "0.15"

# URL
url = "2.5"

# tmdb
tmdb-api = "1.0.0-alpha.5"

# Testing
mockall = "0.14"

# Concurrency
rayon = "1.11"
dashmap = "6.1"

# Authentication
jsonwebtoken = "10.2"
argon2 = "0.5"

[workspace.metadata.dist]
ci = "github"
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin"]
installers = ["shell", "powershell"]

[profile.dev]
[profile.dev.package.ferrex-player]
opt-level = 1

[profile.priority]
inherits = "dev"
opt-level = 3
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[profile.priority.package.ferrex-core]
opt-level = 1

[profile.priority.package.ferrex-server]
opt-level = 1

[profile.priority.package.ferrex-player]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
incremental = false

[profile.release-lite]
inherits = "release"
codegen-units = 256
strip = "none"
incremental = true

[profile.release-lite.package.ferrex-core]
opt-level = 2

[profile.release-lite.package.ferrex-server]
opt-level = 2

[profile.release-lite.package.ferrex-player]
opt-level = 2

[patch.crates-io]
iced = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced" }
iced_core = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_core" }
iced_widget = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_widget" }
iced_wgpu = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_wgpu" }

[patch."https://github.com/iced-rs/iced.git"]
iced = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced" }
iced_core = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_core" }
iced_widget = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_widget" }
iced_wgpu = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_wgpu" }

[patch."https://github.com/Lowband21/iced-ferrix.git"]
iced = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced" }
iced_core = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_core" }
iced_widget = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_widget" }
iced_wgpu = { git = "https://github.com/Lowband21/iced-ferrex.git", package = "iced_wgpu" }

# [patch.crates-io]
# iced = { path = "../../fxeco/iced_ferrex", package = "iced" }
# iced_core = { path = "../../fxeco/iced_ferrex/core", package = "iced_core" }
# iced_widget = { path = "../../fxeco/iced_ferrex/widget", package = "iced_widget" }
# iced_wgpu = { path = "../../fxeco/iced_ferrex/wgpu", package = "iced_wgpu" }
# iced_winit = { path = "../../fxeco/iced_ferrex/winit", package = "iced_winit" }

# [patch."https://github.com/iced-rs/iced.git"]
# iced = { path = "../../fxeco/iced_ferrex", package = "iced" }
# iced_core = { path = "../../fxeco/iced_ferrex/core", package = "iced_core" }
# iced_widget = { path = "../../fxeco/iced_ferrex/widget", package = "iced_widget" }
# iced_wgpu = { path = "../../fxeco/iced_ferrex/wgpu", package = "iced_wgpu" }
# iced_winit = { path = "../../fxeco/iced_ferrex/winit", package = "iced_winit" }

# [patch."https://github.com/Lowband21/iced-ferrex.git"]
# iced = { path = "../../fxeco/iced_ferrex", package = "iced" }
# iced_core = { path = "../../fxeco/iced_ferrex/core", package = "iced_core" }
# iced_widget = { path = "../../fxeco/iced_ferrex/widget", package = "iced_widget" }
# iced_wgpu = { path = "../../fxeco/iced_ferrex/wgpu", package = "iced_wgpu" }
# iced_winit = { path = "../../fxeco/iced_ferrex/winit", package = "iced_winit" }
# iced_test = { path = "../../fxeco/iced_ferrex/test", package = "iced_test" }

# [patch."https://github.com/Lowband21/iced_aw_ferrex.git"]
# iced_aw = { path = "../../fxeco/iced_aw" }

# [patch."https://github.com/Lowband21/lucide-icons-iced-0.14.git"]
# lucide-icons = { path = "../../fxeco/lucide-icons-iced-0.14" }

# [patch."https://github.com/Lowband21/subwave.git"]
# subwave_unified = { path = "../../fxeco/subwave/subwave_unified" }
# subwave_core = { path = "../../fxeco/subwave/subwave_core" }
# subwave_wayland = { path = "../../fxeco/subwave/subwave_wayland" }
