[package]
name = "ferrex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "Core library for Ferrex Media Server - handles media metadata, database operations, and business logic"

[lints]
workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
log.workspace = true

# Time handling
chrono.workspace = true

# UUID generation
uuid.workspace = true

# Database
surrealdb = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

# File system
walkdir.workspace = true

# Media processing
ffmpeg-next = { workspace = true, optional = true }

# Regex
regex.workspace = true
once_cell = "^1.21"

# HTTP Client
reqwest.workspace = true

# Async traits
async-trait.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# URL
url.workspace = true

# TMDB
tmdb-api.workspace = true

# Concurrency
rayon.workspace = true

# Fuzzy matching
fuzzy-matcher = "0.3"

# Random number generation
rand.workspace = true

# Ordered floating point for sorting
ordered-float = "^5"

# File watching
notify = { version = "^7", optional = true }
notify-debouncer-full = { version = "^0.4", package = "notify-debouncer-full", optional = true }

# Image processing
image = { workspace = true, optional = true }

# Cryptography
sha2 = { workspace = true }
argon2 = { workspace = true }
ring.workspace = true
zeroize.workspace = true
base64.workspace = true
hmac = "0.12"
hex = "0.4"
password-hash = "^0.5"
notify-debouncer-mini = "0.7.0"
num_cpus = "1.17.0"
constant_time_eq = "0.4.2"
tokio-util.workspace = true

[features]
default = ["ffmpeg", "database", "compat"]
ffmpeg = ["dep:ffmpeg-next"]
database = ["dep:sqlx", "dep:surrealdb", "dep:redis", "dep:image", "dep:notify", "dep:notify-debouncer-full"]
compat = []
demo = []

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
env_logger = "0.11"
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "migrate", "derive"] }
