[package]
name = "ferrex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "Core library for Ferrex Media Server - handles media metadata, database operations, and business logic"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Shared crates

[dependencies]
ferrex-model = { workspace = true, features = ["serde", "chrono", "sqlx"] }
ferrex-contracts = { workspace = true, features = ["serde", "chrono"] }
# Serialization
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true
rancor.workspace = true
fuzzy-matcher = { version = "0.3.7", optional = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
log.workspace = true

# Time handling
chrono.workspace = true

# UUID generation
uuid.workspace = true
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
ipnetwork = { workspace = true, optional = true }

# Media processing
ffmpeg-next = { workspace = true, optional = true }

# Regex
regex.workspace = true
once_cell = "^1.21"

# HTTP Client
reqwest.workspace = true

# Async traits
async-trait.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tokio-util.workspace = true

# On-disk cache (content-addressed, integrity-checked)
cacache.workspace = true

# URL
url.workspace = true

# TMDB
tmdb-api.workspace = true

# Concurrency
rayon.workspace = true

# Random number generation
rand.workspace = true

# Ordered floating point for sorting
ordered-float = { version = "^5", default-features = false }

# File watching
notify = { version = "^7", optional = true }

# Image processing
image = { workspace = true, optional = true }

# Cryptography
password-hash = { version = "^0.5", default-features = false }
sha2 = { workspace = true }
argon2 = { workspace = true }
zeroize.workspace = true
base64.workspace = true
hmac = "0.12"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
num_cpus = "1.17.0"
constant_time_eq = { version = "0.4.2", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = [
  "rand_core",
] }
normpath = "1.5.0"
num-bigint = "0.4.6"

# Not sure this is worth the added dep
# tap = "1.0.1"

[features]
default = ["ffmpeg", "database", "compat", "scan-runtime", "rkyv"]
ffmpeg = ["dep:ffmpeg-next", "dep:image"]
database = ["dep:sqlx", "dep:redis", "dep:ipnetwork", "dep:image", "dep:notify", "dep:fuzzy-matcher", "ferrex-model/sqlx"]
compat = []
demo = []
rkyv = ["ferrex-model/rkyv", "ferrex-contracts/rkyv"]

# Bundles the queue, watcher, and scan orchestrator runtime. Keeping this behind its own flag lets
# us eventually build a lean `ffi` profile without pulling in SQLx or notify.
scan-runtime = ["database"]

# Placeholder profile for future FFI exports—currently empty but helps document intent.
ffi = []

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
sqlx.workspace = true
