[package]
name = "ferrex-model"
description = "Shared data models for the Ferrex media platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde", "chrono"]
rkyv = ["dep:rkyv", "chrono"]
chrono = ["dep:chrono"]

[dependencies]
serde = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }
uuid.workspace = true
chrono = { workspace = true, optional = true }
url.workspace = true
